[tool.poetry]
name = "hw-1"
version = "0.1.0"
description = ""
authors = ["OlhaVerbova <137227019+OlhaVerbova@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pymongo = "^4.6.1"
mongoengine = "^0.27.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
